Added example for output

--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -206,6 +206,7 @@ actions:
         title: Unsuccessful (Un)Quarantine
         description: List of unsuccessfully quarantined hosts
         type: "[]string"
+        example: ["abcdef123"]
         required: false
   get_agent_details:
     title: Get Agent Details
