Another example output

--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -223,6 +223,7 @@ actions:
         title: Agent
         description: Agent information
         type: agent
+        example: {}
         required: true
   quarantine:
     title: Quarantine
