--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -256,6 +256,7 @@ actions:
         title: Success
         description: Was operation successful
         type: boolean
+        example: true
         required: true
   check_agent_status:
     title: Check Agent Status
@@ -272,19 +273,23 @@ actions:
         title: Is Currently Quarantined
         description: Is the device currently quarantined
         type: boolean
+        example: true
         required: true
       is_quarantine_requested:
         title: Is Quarantine Requested
         description: Is a quarantine action pending on this device
         type: boolean
+        example: true
         required: true
       is_unquarantine_requested:
         title: Is Unquarantine Requested
         description: Is there a pending request to release quarantine on this device
         type: boolean
+        example: true
         required: true
       is_asset_online:
         title: Is Asset Online
         description: Indicates that the agent is connected to the Insight platform. This means the device is powered on and is connected to Rapid7
         type: boolean
+        example: true
         required: true
